assets/css/main.css
body {
  background-color: rgb(15 23 42);
  color: rgb(148 163 184);
  font-family: "Comfortaa", "PT Sans", Calibri, Tahoma, sans-serif;
  font-size: 1.15rem;
  line-height: 1.5;
  padding: 0;
  margin: 0;
}
ul,
li {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
h1,
h2,
h3 {
  margin: 0;
  padding: 0;
}
h1 {
  color: rgb(226 232 240);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0;
}
.container {
  max-width: 1140px;
  margin: auto;
}
@media only screen and (min-width: 600px) {
  .container {
    padding: 5rem 8rem;
  }
}
.main {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}
@media only screen and (min-width: 600px) {
  .main {
    flex-direction: row;
  }
}

@media only screen and (min-width: 600px) {
  .sticky {
    position: sticky;
    top: 5rem;
    height: 400px;
  }
}
.content {
  width: 90%;
}
.links ul li {
  padding: 1rem 0;
}
.links ul li a,
.links ul li a:visited {
  text-decoration: none;
  color: rgb(100 116 139);
}
.nav-indicator {
  width: 2rem;
  background-color: rgb(71 85 105);
  height: 2px;
  display: inline-block;
  vertical-align: middle;
  margin-right: 1em;
}
.links ul li a.active {
  color: rgb(226 232 240);
}

.links ul li a.active .nav-indicator {
  width: 8rem;
  background-color: rgb(226 232 240);
}
.mouse-move {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}
.transition-all {
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 0.15s;
}
.external-link {
  width: 1rem;
  height: 1rem;
}
.list {
  margin: 0;
  padding: 0;
  list-style-type: none;
  font-size: 1rem;
}
.list .group {
  padding: 1rem;
  border-radius: 0.75rem;
  position: relative;
  z-index: 1;
  display: flex;
  margin-left: -15px;
}
.list .group header {
  font-size: 1rem;
  text-transform: uppercase;
  padding-right: 15px;
}
@media only screen and (min-width: 600px) {
  .list .group header {
    min-width: 15rem;
  }
}
.list .group:hover {
  background-color: rgba(30, 41, 59, 0.75);
}
.Technologies-used {
  display: flex;
  flex-wrap: wrap;
  list-style-type: none;
}

.Technologies-used div {
  border-radius: 9999px;
  background-color: rgba(45, 212, 191, 0.1);
  color: rgb(94 234 212);
  padding: 5px 20px;
  margin: 5px;
  font-size: 12px;
}
.heading {
  text-decoration: none;
  color: rgb(226 232 240);
}
.inline-link {
  text-decoration: none;
  font-weight: bold;
}
.inline-link:hover {
  color: rgb(94 234 212);
}
#experience,
#projects {
  margin-top: 8rem;
}
.font-white {
  color: rgb(226 232 240);
}
.social-media {
  display: flex;
  margin-top: 2rem;
}
.social-media svg {
  height: 1.5rem;
  width: 1.5rem;
  padding: 10px;
  color: rgb(148 163 184);
}

